services/monitoring/uptime-kuma/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  selector: 
    app: uptime-kuma
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 3001
